--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="scroll-button">
     <a href="#home"><i class="fas fa-arrow-up"></i></a>
   </div>
-  <!-- navgaition menu -->
+  <!-- navigation menu -->
   <nav>
     <div class="navbar">
       <div class="logo"><a href="#">Personal Blog.</a></div>
@@ -51,7 +51,7 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="images/j.jpg" alt="">
+      <img src="j.jpg" alt="">
     </div>
     <div class="right" >
       <div class="topic">Studying is my Passion</div>
@@ -67,23 +67,23 @@
     <div class="title"><span>Photos of Me</span></div>
   <div class="boxes">
         <div class="box">
-        <img src="images/1.jpeg" alt=""width="200" height="200">
+        <img src="1.jpeg" alt=""width="200" height="200">
         <p>Noong kala ko madali lang ang IT</p>
       </div>
       <div class="box">
-        <img src="images/2.jpeg" alt="Java"width="200" height="200">
+        <img src="2.jpeg" alt="Java"width="200" height="200">
         <p>Noong nakapag type na ako ng Hello World sa Java</p>
     </div>
         <div class="box">
-        <img src="images/3.jpeg" alt="Javascript"width="200" height="200">
+        <img src="3.jpeg" alt="Javascript"width="200" height="200">
         <p>Photo of Me noong naintindihan naintindihan ko kung ano ang Variable</p>
       </div>
       <div class="box">
-      <img src="images/4.jpg" alt="CSS"width="200" height="200">
+      <img src="4.jpg" alt="CSS"width="200" height="200">
       <p>Ito yung time na nakapag Add,Subtract, Divide, Multiply na ako sa Java </p>
     </div>
     <div class="box">
-    <img src="images/6.jpg" alt="PHP"width="200" height="200">
+    <img src="6.jpg" alt="PHP"width="200" height="200">
     <p>Nag alaga ng Pusa dahil puro Error sa Codes </p>
   </div>
   <div class="box">
@@ -137,12 +137,12 @@
     <div class="title"><span>Favorite Programming Languages</span></div>
     <div class="boxes">
       <div class="box">
-        <img src="images/python.png" alt=""width="100" height="100">
+        <img src="python.png" alt=""width="100" height="100">
         <div class="topic">Python</div>
         <p>Python is a general-purpose programming language that is known for its simplicity and readability.</p>
     </div>
     <div class="box">
-        <img src="images/java.png" alt="Java"width="100" height="100">
+        <img src="java.png" alt="Java"width="100" height="100">
         <div class="topic">JAVA</div>
         <p>Java is known for its portability, security, and performance.</p>
     </div>
@@ -152,7 +152,7 @@
         <p>JavaScript is a programming language that is used to create interactive web pages and web applications.</p>
      </div>
     <div class="box">
-      <img src="images/css-3.png" alt="CSS"width="100" height="100">
+      <img src="css-3.png" alt="CSS"width="100" height="100">
       <div class="topic">CSS</div>
       <p>CSS (Cascading Style Sheets) is a style sheet language that is used to control the appearance of web pages. </p>
     </div>
@@ -163,7 +163,7 @@
    <p>PHP (Hypertext Preprocessor) is a server-side scripting language that is used to develop web applications.</p>
  </div>
  <div class="box">
-    <img src="images/html5.png" alt="HTML"width="100" height="100">
+    <img src="html5.png" alt="HTML"width="100" height="100">
     <div class="topic">PHP</div>
     <p>HTML (HyperText Markup Language) is a markup language that is used to create the structure of web pages.</p>
   </div>
@@ -180,12 +180,12 @@
         <p>Attends Cyber Security Competency framework held by DICT Cordillera Administrative Region.</p>
       </div>
         <div class="box">
-          <img src="images/word.png" alt="CSS"width="200" height="200">
+          <img src="word.png" alt="CSS"width="200" height="200">
         <div class="topic">Wordpress Developer</div>
         <p>Attends 5-day Wordpress Web development and become certified Wordpress Developer.</p>
       </div>
         <div class="box">
-          <img src="images/book.jpg" alt="CSS"width="200" height="200">
+          <img src="book.jpg" alt="CSS"width="200" height="200">
         <div class="topic">Bookkeeping NCII</div>
         <p>Certified Bookkeeper </p>
       </div>
