--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <p>Nag alaga ng Pusa dahil puro Error sa Codes </p>
   </div>
   <div class="box">
-  <img src="images/7.jpg" alt="HTML"width="200" height="200">
+  <img src="7.jpg" alt="HTML"width="200" height="200">
   <p>Pasado sa Capstone Exercise Hahaha</p>
     </div>
   </div>
@@ -175,7 +175,7 @@
       <div class="title"><span>CERTIFICATIONS</span></div>
       <div class="boxes">
         <div class="box">
-          <img src="images/cyber-security.png" alt="CSS"width="200" height="200">
+          <img src="cyber-security.png" alt="CSS"width="200" height="200">
         <div class="topic">Cyber Security </div>
         <p>Attends Cyber Security Competency framework held by DICT Cordillera Administrative Region.</p>
       </div>
