--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
       <p>CSS (Cascading Style Sheets) is a style sheet language that is used to control the appearance of web pages. </p>
     </div>
   <div class="box">
-    <img src="images/php.png" alt="PHP"width="100" height="100">
-
+    <img src="php.png" alt="PHP"width="100" height="100">
    <div class="topic">PHP</div>
    <p>PHP (Hypertext Preprocessor) is a server-side scripting language that is used to develop web applications.</p>
  </div>
