--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <p>Java is known for its portability, security, and performance.</p>
     </div>
       <div class="box">
-        <img src="images/java-script.png" alt="Javascript"width="100" height="100">
+        <img src="java-script.png" alt="Javascript"width="100" height="100">
         <div class="topic">JAVASCRIPT</div>
         <p>JavaScript is a programming language that is used to create interactive web pages and web applications.</p>
      </div>
