--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- navigation menu -->
   <nav>
     <div class="navbar">
-      <div class="logo"><a href="#">Josue's Personal .</a></div>
+      <div class="logo"><a href="#">Josue's Personal Joshua .</a></div>
       <ul class="menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
