--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <div class="text">
         <h4>Early Life and Family: </h4>
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Josue Torzar</strong>was born on December 20, 2002, in the picturesque town of New Poblacion, Cabusao, nestled in the heart of Camarines Sur, Philippines. He grew up in a close-knit and affectionate family environment, surrounded by the love and support of his parents and siblings. This nurturing upbringing laid the foundation for his strong work ethic and determination. 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Josue Torzar</strong> &nbsp;was born on December 20, 2002, in the picturesque town of New Poblacion, Cabusao, nestled in the heart of Camarines Sur, Philippines. He grew up in a close-knit and affectionate family environment, surrounded by the love and support of his parents and siblings. This nurturing upbringing laid the foundation for his strong work ethic and determination. 
         </p>
         <br>
         <h4>Academic Excellence: </h4>
